# SCT-ESP32

./: README.md
hardware/: .gitignore  CMakeLists.txt
hardware/main/: CMakeLists.txt  config.h  filesystem.c  filesystem.h  list.c  list.h  main.c  metering.c  metering.h  webserver.c  webserver.h  wifi.c  wifi.h
software/: .gitignore  graph.js  index.html  languages.js  main.js  manual.js  points.js  settings.js  style.css
